--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "dependencies": {
     "stack": "~0.1.0",
     "st": "~0.2.3",
-    "handlebars": "~1.3.0",
     "js-yaml": "~3.0.1",
-    "fileset": "~0.1.5"
+    "fileset": "~0.1.5",
+    "cheerio": "~0.13.1",
+    "tape": "~2.4.2",
+    "engine.io-client": "~0.8.2",
+    "engine.io": "~0.8.2",
+    "browserify": "~3.24.10",
+    "socket.io": "~0.9.16",
+    "socket.io-client": "~0.9.16",
+    "coffee-script": "~1.7.1",
+    "is-type": "0.0.1"
   }
 }
